# python-sqs-rpc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
docs/: django-integration.md  quickstart.md  testing-guide.md
github/.workflows/: cd.yaml
sqs_rpc/: __init__.py  client.py  config.py  exceptions.py  testing.py  worker.py
sqs_rpc/example/: client_run.py  django_test_example.py  unit_test_example.py  worker_run.py
